   - Reconciliation page: have all entry/batlines related actions (todo #1428).
   - Reconciliation render take into account the last available BAT at date (todo #1420).
   - Recurrent operations validation: have a visual display of the status (todo #1369).
   - Restore assistant: allow admin credentials to be saved (todo #1416).

 Bug fixes:

   - Exercice closing: forward operation number are generated in the new exercice.
   - Exercice closing: rightly store last closing date and last entry number.
   - myICollectionable: make sure the dataset is loaded before first insertion.
   - ofaAccountFrameBin: fix notebook size when the dataset is empty.
   - ofaAccountPage: fix page display when the dataset is empty.
   - ofaAccountStore: let the treeview be repopulated on collection reload.
   - ofaOpeTemplateFrameBin: fix notebook size when the dataset is empty.
   - ofaOpeTemplatePage: fix page display when the dataset is empty.
   - ofaOpeTemplateStore: let the treeview be repopulated on collection reload.
   - ofaReconcilGroup: conciliation update label is insensitive (todo #1432).
   - ofaReconcilRender: compute the account solde depending of the requested date (todo #1413).
   - ofaRecurrentRunPage: renew the actions state after an operation.
   - Printings: identifiers are ellipsized if too large (todo #1150).
   - Printings: display the dossier label instead of the meta name (todo #1415).

 Other changes:

   - Clarify the reference management of the collection (todo #1359).
   - ofaAccentryStore: new class.
   - ofaAccentryTreeview: new class.
   - ofaBatLineProperties: new class.
   - ofaIRenderer: new interface.
   - ofaOperationGroup: new class.
   - ofaSettlementGroup: new class.
   - ofaUnreconcilPage: new class.
   - ofaUnsettledPage: new class.
   - ofoCounters: new class.
   - ofoEntry: status is stored in DBMS as a char indicator (todo #1414).
   - ofoRecurrentRun: review status (numeric in the code, alpha in the dbms).
